# tritium-lib

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  geo-demo.sh  pyproject.toml  sim-demo.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.memsearch/memory/: 2026-04-28.md
data/: training.db
docs/: API.md  CHANGELOG.md  GOVERNANCE.md  MIGRATION.md  README.md  STATUS.md
docs/reports/: IDIOT_CHECK.md
scripts/: mermaid_github_check.mjs  mermaid_github_check.sh
scripts/mermaid-github-check/: README.md  package-lock.json  package.json  selftest.mjs
src/tritium_lib/: README.md  __init__.py
tests/: test_abilities.py  test_acl.py  test_acoustic_event_models.py  test_acoustic_feature_vector.py  test_acoustic_intelligence.py  test_acoustic_modem.py  test_acoustic_tdoa.py  test_addon_context.py  test_addon_events.py  test_air_combat.py  test_ais.py  test_alert.py  test_alert_rules.py  test_alerting.py  test_ambient.py  test_ambient_homerange.py  test_analytics.py  test_animation.py  test_areas.py  test_arsenal.py  test_artillery.py  test_asymmetric.py  test_async_store.py  test_audit_entry.py  test_audit_log.py  test_audit_query.py  test_audit_trail.py  test_auth.py  test_auth_demo.py  test_auth_jwt_extended.py  test_base_learner.py  test_behavior_models.py  test_behavior_profiles.py  test_behavior_tree.py  test_ble.py  test_ble_interrogation.py  test_ble_store.py  test_buildings.py  test_byte_assoc.py  test_c2.py  (+264 more)
tests/actions/: test_formation.py  test_lua_parser.py
tests/comms/: test_extraction.py  test_speaker.py
tests/control/: test_attitude_stabilizer.py  test_command_link.py  test_disturbance.py  test_gait_speed.py  test_kick_landed.py  test_route_trace.py  test_step_reflex.py  test_stride_filter.py  test_teleop.py  test_waypoint_follower.py  test_yaw_rate_tracker.py  test_yaw_regulator.py
tests/events/: test_advanced_event_bus.py  test_queue_event_bus.py
tests/fusion/: test_colocated_multimodal_fusion.py  test_convergence_wave202.py  test_fusion_engine.py  test_sensor_pipeline.py
tests/geo/: test_advertised_mount.py  test_body_attitude.py  test_camera_mount.py  test_collider_shape.py  test_fetcher_cold_chain.py  test_geo_reference.py  test_gis_ao_packs.py  test_gis_buildings.py  test_gis_cache.py  test_gis_cache_sweep.py  test_gis_capture.py  test_gis_chokepoints.py  test_gis_contours.py  test_gis_fetchers.py  test_gis_models.py  test_gis_nhd.py  test_hitscan.py  test_isaac_frame.py  test_landcover.py  test_laser_scan.py  test_path_fidelity.py  test_scene3d.py
tests/inference/: test_fleet.py  test_fleet_gateway.py  test_llm_client.py  test_model_router.py
tests/intelligence/: test_access_patterns.py  test_acoustic_classifier.py  test_acoustic_classifier_train.py  test_anomaly_engine.py  test_association_network.py  test_behavior_profiler.py  test_behavioral_pattern_learner.py  test_coverage_optimizer.py  test_crowd_dynamics.py  test_feature_engineering.py  test_fusion_metrics.py  test_pattern_learning.py  test_pipeline_demo.py  test_position_estimator.py  test_prediction_store.py  test_rl_metrics.py  test_threat_assessment.py  test_threat_model.py  test_trajectory_predictor.py  test_zone_analysis.py
tests/js/: test_road_network.js  test_traffic_controller.js  test_vehicle.js
tests/models/: test_acoustic_training.py  test_analytics.py  test_analytics_dashboard.py  test_autonomous.py  test_benchmark.py  test_body.py  test_confidence.py  test_correlation_evidence.py  test_daily_pattern.py  test_deployment.py  test_device_lifecycle.py  test_event_schema.py  test_export.py  test_fire_control.py  test_fixedwing.py  test_forensics.py  test_gait_trajectory.py  test_geofence_event.py  test_gpx.py  test_hits.py  test_intelligence_package.py  test_kml.py  test_mesh_node_extended.py  test_mission.py  test_movement_analytics.py  test_multirotor.py  test_network_topology.py  test_personality.py  test_proximity.py  test_quadruped.py  test_quick_action.py  test_rover.py  test_scenario.py  test_swarm.py  test_tak_export.py  test_target_status.py  test_template.py  test_trail_export.py  test_transition.py  test_user.py  (+3 more)
tests/mqtt/: test_mqtt_demo.py
tests/nodes/: test_base.py
tests/perception/: test_depth.py  test_depth_codec.py  test_depth_pipeline.py  test_depth_wire_to_pipeline.py  test_detection_provenance.py  test_extraction.py  test_frame_detection.py  test_multipart.py  test_onnx_detector.py  test_perception.py  test_projection_world.py  test_stream_sync.py
tests/planning/: test_astar.py  test_builder_from_terrain_map.py  test_clearance.py  test_contours.py  test_costmap.py  test_gis_ingest.py  test_hierarchical.py  test_land_cover.py  test_layers.py  test_scene_costmap.py
tests/sdk/: test_manifest.py  test_protocols.py  (+1 more)
web/: README.md  command-palette.js  layout-manager.js  store.js  utils.js  websocket.js
web/sim/: idm.js  (+14 more)
(+1010 files in other folders)
