[project]
name = "tritium-lib"
version = "0.1.0"
description = "Shared library for the Tritium ecosystem — events, MQTT, config, models, auth"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Matthew Valancy" },
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.0"]
testing = ["requests>=2.28", "opencv-python-headless>=4.8", "numpy>=1.24"]
full = ["paho-mqtt>=2.0", "bcrypt>=4.1.0", "requests>=2.28", "opencv-python-headless>=4.8", "numpy>=1.24"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
