[project]
name = "tritium-lib"
version = "0.1.0"
description = "Shared library for the Tritium ecosystem — events, MQTT, config, models, auth"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Matthew Valancy" },
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.0"]
graph = ["kuzu>=0.4"]
routing = ["networkx>=3.0", "httpx>=0.24"]
ml = ["scikit-learn>=1.3"]
testing = ["requests>=2.28", "opencv-python-headless>=4.8", "numpy>=1.24"]
geospatial = [
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "Pillow>=10.0",
    "numpy>=1.24",
    "requests>=2.28",
]
sam = [
    "torch>=2.0",
    "torchvision>=0.15",
    "segment-anything-2>=0.1",
]
full = ["paho-mqtt>=2.0", "bcrypt>=4.1.0", "requests>=2.28", "opencv-python-headless>=4.8", "numpy>=1.24", "kuzu>=0.4", "networkx>=3.0", "httpx>=0.24", "scikit-learn>=1.3", "loguru>=0.7"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that hit the network or take >10s (deselect with '-m \"not slow\"')",
    "unit: marks fast unit tests",
    "visual: marks OpenCV+Playwright visual regression tests for the sim engine demo",
    "timeout: marks tests with a timeout duration (requires pytest-timeout plugin)",
]
filterwarnings = [
    "error",
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.setuptools.packages.find]
where = ["src"]
