[project]
name = "tritium-lib"
version = "0.1.0"
description = "Shared library for the Tritium ecosystem — events, MQTT, config, models, auth"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Matthew Valancy" },
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.0"]
graph = ["kuzu>=0.4"]
routing = ["networkx>=3.0", "httpx>=0.24"]
ml = ["scikit-learn>=1.3"]
# httpx2: starlette's TestClient deprecated plain httpx; without httpx2 the
# TestClient import raises StarletteDeprecationWarning, which our
# filterwarnings=error escalates into collection errors in 4 test files.
# 2026-07-10: extra completed so `uv pip install -e '.[full,testing]'` alone
# yields a runnable test env (the main-checkout .venv was found bootstrap-only;
# pytest/pytest-asyncio/pytest-timeout/aiosqlite/fastapi were needed on top).
testing = [
    "requests>=2.28",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "httpx2>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "aiosqlite>=0.19",
    "fastapi>=0.110",
]
geospatial = [
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "Pillow>=10.0",
    "numpy>=1.24",
    "requests>=2.28",
]
sam = [
    "torch>=2.0",
    "torchvision>=0.15",
    "segment-anything-2>=0.1",
]
full = ["paho-mqtt>=2.0", "bcrypt>=4.1.0", "requests>=2.28", "opencv-python-headless>=4.8", "numpy>=1.24", "kuzu>=0.4", "networkx>=3.0", "httpx>=0.24", "scikit-learn>=1.3", "loguru>=0.7"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that hit the network or take >10s (deselect with '-m \"not slow\"')",
    "unit: marks fast unit tests",
    "visual: marks OpenCV+Playwright visual regression tests for the sim engine demo",
    "timeout: marks tests with a timeout duration (requires pytest-timeout plugin)",
]
filterwarnings = [
    "error",
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ship JSON data files as package data so lookups/fixtures survive a wheel build
# (editable/PYTHONPATH installs read the source tree directly; these entries are
# what make a real build include them).
[tool.setuptools.package-data]
"tritium_lib.data" = ["*.json"]
"tritium_lib.geo.gis.fixtures" = ["*.json"]
